--- a/airs/content/pages/products/rules/findings/security/108/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/108/index.adoc
@@ -1,5 +1,5 @@
 :slug: products/rules/findings/108/
-:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks. In this case, the finding presents information about vulnerabilities arising from not establishing a rate limit, recommendations to avoid them and related security requirements.
+:description: The purpose of this page is to present information about the set of findings reported by Fluid Attacks.
 :keywords: Improper, Control, Interaction, Frequency, Rate, Limit
 :findings: yes
 :type: security
@@ -8,11 +8,9 @@
 
 == Description
 
-The system does not limit the amount of requests (rate limit) that a user can
-post to the server in a short period of time.
+The system does not limit the amount of requests (rate limit)
+that a user can post to the server in a short period of time.
 
 == Rules
 
-. [[r1]] [inner]#link:/products/rules/list/072/[R072. Set maximum response time]#
-
-. [[r2]] [inner]#link:/products/rules/list/327/[R327. Set rate limit]#
+. [[r1]] [inner]#link:/products/rules/list/327/[R327. Set rate limit]#
