airs\refac(doc): #3220 blog fix asymmetric
- I have fixed a reference in asymmetric-dos-slow-http-attack post.


Former-commit-id: bf89f5a605ec75a21e22b1a573fc0068b00f0ed8

--- a/airs/content/blog/asymmetric-dos-slow-http-attack/index.adoc
+++ b/airs/content/blog/asymmetric-dos-slow-http-attack/index.adoc
@@ -306,7 +306,7 @@ I wish you a nice week, and will see you in another post!
 link:https://en.wikipedia.org/wiki/Hypertext_Transfer_Protocol[Wiki].
 
 . [[r2]] Sergey Shekyan (2018).
-'Slowhttptest - Instalation and usage'.
+'Slowhttptest - Installation And Usage'.
 link:https://github.com/shekyan/slowhttptest/wiki/InstallationAndUsage[Github wiki].
 
 . [[r3]] Sergey Shekyan (2018).
