airs\refac(doc): #3177.14 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: ba81218855b8c89ce239ac5f4d1fc8113e0c4607

--- a/airs/content/pages/products/rules/findings/security/002/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/002/index.adoc
@@ -12,8 +12,8 @@ The server is rendered unresponsive as a result of one of the following:
 
 * An amplification attack,
 which uses a single request to produce multiple responses.
-* A single malicious request that breaks the application or consumes a
-humongous amount of resources.
+* A single malicious request that breaks the application
+or consumes an enormous amount of resources.
 
 == Rules
 
