--- a/airs/content/pages/products/rules/findings/security/041/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/041/index.adoc
@@ -8,8 +8,8 @@
 
 == Description
 
-It is possible to use low-strength, default credentials to access system
-resources such as the database.
+It is possible to use low-strength,
+default credentials to access system resources, such as the database.
 
 == Rules
 
