--- a/airs/content/pages/products/rules/findings/security/059/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/059/index.adoc
@@ -8,8 +8,8 @@
 
 == Description
 
-The system stores sensitive information such as credentials, bank accounts
-and file paths in log files.
+The system stores sensitive information,
+such as credentials, bank accounts and file paths in log files.
 
 == Rules
 
