--- a/airs/content/pages/products/rules/list/networks/356/index.adoc
+++ b/airs/content/pages/products/rules/list/networks/356/index.adoc
@@ -9,9 +9,9 @@
 == Requirement
 
 The system should regularly check *DNS* names and sub-domain names in use by
-the application for expiry or change.
-This helps protect applications from the effects of sub-domain takeover
-attacks.
+the application for expiration or change.
+This helps protect applications
+from the effects of sub-domain takeover attacks.
 
 == References
 
