--- a/airs/content/pages/products/rules/list/virtualization/221/index.adoc
+++ b/airs/content/pages/products/rules/list/virtualization/221/index.adoc
@@ -10,4 +10,4 @@
 
 A virtual machine must not have connected devices
 that are not necessary for its operation
-(+Floppy+, +IDE+, +CD/DVD+, +USB+, +Serial+).
+(e.g., +Floppy+, +IDE+, +CD/DVD+, +USB+, +Serial+).
