--- a/airs/content/pages/products/rules/findings/security/021/index.adoc
+++ b/airs/content/pages/products/rules/findings/security/021/index.adoc
@@ -8,7 +8,7 @@
 
 == Description
 
-It is possible to inject XPath queries to the application.
+It is possible to inject XPath queries into the application.
 This may be used to read sensitive data without authorization.
 
 == Rules
