airs\refac(doc): #3177.15 native eng improvement
- New changes suggested by Santaularia were applied.


Former-commit-id: 7db683bbbb424e6cf015322e0164796531834fb3

--- a/airs/content/pages/products/rules/findings/hygiene/037/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/037/index.adoc
@@ -10,7 +10,7 @@
 
 It is possible to obtain technical information such as:
 
-* System component versions (*HTTP* headers, service banner, etc)
+* System component versions (*HTTP* headers, service banner, etc.)
 
 * Specific information about the configuration of server components
 (**php.ini**, **web.config**)
