--- a/airs/content/pages/products/rules/findings/hygiene/060/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/060/index.adoc
@@ -15,7 +15,7 @@ This may cause security vulnerabilities to materialize,
 as some special flows go unnoticed.
 
 Using a "*catch*" statement to catch a high-level class such as "*Exception*"
-can hide exceptions that deserve special treatment,
+can hide exceptions that deserve special treatment
 or that should not be handled at that point in the program.
 It negates the purpose of typified exceptions (e.g., "*ValueError*",
 "*ConnectionError*" and "*NullPointerException*"),
