--- a/airs/content/pages/products/rules/findings/hygiene/119/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/119/index.adoc
@@ -8,7 +8,7 @@
 
 == Description
 
-The system exposes sensitive information through public files metadata.
+The system exposes sensitive information through public files' metadata.
 
 == Rules
 
