airs\refac(doc): #3177.16 native eng improvement
- Little new change suggested by Santaularia was applied.


Former-commit-id: 1f97034526e58a34c7697875edab42e8392e80ce

--- a/airs/content/pages/products/rules/findings/hygiene/113/index.adoc
+++ b/airs/content/pages/products/rules/findings/hygiene/113/index.adoc
@@ -12,7 +12,7 @@ There are variant variables in the source code,
 i.e., no specific type is declared for them.
 This can be inefficient, as it becomes necessary
 to identify the variable's data type
-and cast it to it every time it will be used.
+and cast it every time it is used.
 
 == Rules
 
