--- a/airs/content/pages/compliance/gdpr/index.adoc
+++ b/airs/content/pages/compliance/gdpr/index.adoc
@@ -1,6 +1,7 @@
 :slug: compliance/gdpr/
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including GDPR.
 :keywords: Fluid Attacks, GDPR, EU, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
+:banner: bg-compliance-internal
 :template: compliance
 
 = GDPR
