--- a/airs/content/pages/compliance/hipaa/index.adoc
+++ b/airs/content/pages/compliance/hipaa/index.adoc
@@ -1,6 +1,7 @@
 :slug: compliance/hipaa/
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including HIPAA.
 :keywords: Fluid Attacks, HIPAA, PHI, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
+:banner: bg-compliance-internal
 :template: compliance
 
 = HIPAA
