airs\feat(doc): #3596 cloud systems page
- Added Cloud infraestructure Systems page content


Former-commit-id: 8da7349d2b917d8433cd1134cea142a3a17764a1

--- a/airs/content/pages/compliance/hipaa/index.adoc
+++ b/airs/content/pages/compliance/hipaa/index.adoc
@@ -1,4 +1,5 @@
 :slug: compliance/hipaa/
+:category: compliance
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including HIPAA.
 :keywords: Fluid Attacks, HIPAA, PHI, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
 :banner: bg-compliance-internal
