--- a/airs/content/pages/compliance/gdpr/index.adoc
+++ b/airs/content/pages/compliance/gdpr/index.adoc
@@ -1,4 +1,5 @@
 :slug: compliance/gdpr/
+:category: compliance
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including GDPR.
 :keywords: Fluid Attacks, GDPR, EU, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
 :banner: bg-compliance-internal
