--- a/airs/content/pages/compliance/nist/index.adoc
+++ b/airs/content/pages/compliance/nist/index.adoc
@@ -1,4 +1,5 @@
 :slug: compliance/nist/
+:category: compliance
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including NIST.
 :keywords: Fluid Attacks, NIST, 800-53, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
 :banner: bg-compliance-internal
