--- a/airs/content/pages/compliance/pci/index.adoc
+++ b/airs/content/pages/compliance/pci/index.adoc
@@ -1,4 +1,5 @@
 :slug: compliance/pci/
+:category: compliance
 :description: At Fluid Attacks, through comprehensive analysis, we can help you comply with a variety of security standards for information technology, including PCI.
 :keywords: Fluid Attacks, PCI SSC, PCI DSS, Continuous Hacking, Security, Standards, Ethical Hacking, Pentesting
 :banner: bg-compliance-internal
