--- a/skims/static/translations/findings/F055_AWS.yaml
+++ b/skims/static/translations/findings/F055_AWS.yaml
@@ -1,3 +1,10 @@
+src.lib_path.f055_aws.security_group_without_egress:
+  en: >
+    Missing egress rules allows all egress traffic, explicitly define egress
+    rules.
+  es: >
+    La falta de reglas de salida permite todo el tráfico de salida, defina
+    explícitamente las reglas de salida.
 utils.model.finding.enum.F055_AWS.instances_without_profile:
   en: EC2 instances require credentials to access other AWS services
   es: >
